--- a/_lamd/_lamd.yml
+++ b/_lamd/_lamd.yml
@@ -28,6 +28,7 @@ pptx: False
 pdf: False
 assignment: False
 ipynb: False
+reveal: False
 potx: ""
 baseurl: "advds/" # the subpath of your site, e.g. /blog/
 url: "https://mlatcl.github.io/" # the base hostname & protocol for your site
