--- a/_lamd/_lamd.yml
+++ b/_lamd/_lamd.yml
@@ -20,6 +20,7 @@ snippetsdir: $HOME/lawrennd/snippets/
 writediagramsdir: .
 scriptsdir: ./scripts/
 diagramsdir: ./slides/diagrams/
+slidesheader: slides-header.html
 posts: True
 docx: False
 notespdf: False
