Update with slides integrated

--- a/_people/people.yml
+++ b/_people/people.yml
@@ -22,3 +22,20 @@
   url: https://www.cst.cam.ac.uk/people/rs2071
   title: Radzim Sendyka
 
+- given: Bagonza Jimmy
+  family: Kinyonyi
+  image: people/bagonza-jimmy-owa-kinyonyi.jpg
+  url: https://www.linkedin.com/in/bagonza-jimmy-kinyonyi-b73620125/
+  title: Bagonza Jimmy Kinyonyi
+
+- given: Joyce
+  family: Nakatumba-Nabende
+  image: people/joyce-nabende.jpg
+  url: https://www.linkedin.com/in/jnakatumba/
+  title: Joyce Nakatumba-Nabende
+
+- given: Michael T.
+  family: Smith
+  image: people/michael-t-smith.png
+  title: Michael T. Smith
+  
