Update with Christian's lecture

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Advanced Data Science
 author:
-  name: Carl Henrik Ek and Neil D. Lawrence
+  name: Christian Cabrera and Carl Henrik Ek and Neil D. Lawrence
   email:
   twitter: 
 description: >- # this means to ignore newlines until "baseurl:"
